Bug 55988 + 64415: Hidden inputs and buttons save state in session history, r=jst@netscape.com, sr=vidur@netscape.com